[metadata]
name = explore
version = 0.1.0
author = Nick Sorros
author_email = nsorros@gmail.com
description = Explore documents from the terminal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nsorros/explore
project_urls =
    Bug Tracker = https://github.com/nsorros/explore/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    typer
    pynput
    catalogue
python_requires = >=3.8

[options.extras_require]
rich =
    rich
test =
    pytest

[options.entry_points]
console_scripts =
    explore = explore:app
